css/style.css
html, html a {
    -webkit-font-smoothing: antialiased;
    text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
}
body {
    /*Default font and color*/
    font-family: 'alexandriaflfbold','Open Sans', sans-serif;
    color: #3e3939;

    /*Background Image*/
    background-color: white;
}
.container {
    max-width: 1068px;
}
a {
    text-decoration: none;
    color: #33cccc;
}
a:hover {
    text-decoration: none;
    color: #33cccc;
}
.container h1 {
    font-family: 'alexandriaflfbold', 'Open Sans';
	font-size: 130px;
	text-align: center;
	color: #3e3939;
}
.tab-content {
    max-width: 1068px;
}
.tab-content p {
    line-height: 36px;
}
.header p {
	text-align: center;
	font-weight: 400;
}
/***TEMP***/
.overlaymain{
    margin-left: 319px;
    position: absolute;

}

/***NAVBAR***/
.navbar {
    border-radius: 0px;
    max-width: 1068px;
    margin: auto;
    background-color: #fb7070;
    min-height: 52px;
}
.navbar .nav {
    margin-right: -14px;
}
.navbar .container {
    padding-right: 12px;
}
.navbar .navbar-collapse {
/*    padding-right: 0px;*/
}
.navbar .nav > li > a {
    font-size: 12px;
    font-family: 'alexandriaflfbold';
    color: white;
    text-shadow: none;
    margin-bottom: -18px;
    padding-top: 24px;
    padding-right: 16px;
    padding-left: 17px;
    height: 52px;
}
.navbar .nav .active > a, .navbar .nav .active > a:hover {
    color: white;
    background-color: rgba(0,0,0,0.1);
    height: 52px;
}
.navbar .nav > li > a:hover {
    color: white;
    background-color: rgba(0,0,0,0.02);
    height: 52px;
}
.pull-right {
    float: right;
}
.navbar-brand {
    padding-top: 17px;
    margin-bottom: -8px;
    color: white;
    font-family: 'alexandriaflfbold';
    font-size: 30px;
    margin-left: 15px;
}
.divider {
    max-width: 940px;
    height: 2px;
    display: block;
    margin: auto;
    background-color: white;
}
.navbar-toggle {
    border: none;
    background-color: rgba(0,0,0,0);
}
.navbar-toggle .icon-bar {
    background-color: #3e3939;
}
.navbar-toggle:hover {
    background-color: rgba(0,0,0,0.2);
}
.navbar-toggle:focus {
    background-color: rgba(0,0,0,0);
}
.navbar-collapse {
    border: none;
    overflow: hidden;
}


/***TAB CONTENT***/
#home .writing {
    padding-top: 50px;
}
#home .writing p {
    margin-top: 100px;
}
#tabcontent {
    padding: 0px 0px 0px 0px;
}
.tab-content p {
    font-size: 50px
}
.arrow {
    text-align: center;
}
.icon-double-angle-down {
    color: #3e3939;
    font-size: 200px;
    display: block;
}
.arrow:hover {
    color: #33cccc;
}
/*@media screen and (max-width: 767px) {
    .navbar .container {
        padding-right: 15px;
    }
    .navbar .navbar-collapse {
        padding-right: 15px;
    }
    #home .text-container {
        width: 100% !important;
    }
    #home img {
        display: none;
    }
    #home .icon-double-angle-down {
        display: none;
    }
}
*/
/***HOME CONTENT***/
.home-content {
    position: relative;
    width: 1068px;
    height: 550px;
    padding-top: 100px;
    margin-bottom: 350px;
}
#home p {
    margin-top: 80px;
    margin-bottom: 200px;
}
#home .text-one {
    position: absolute;
    top: 259px;
    left: 23px;
    color: #3e3939;
    width: 1068px;
}
#home .text-one p {
    font-family: 'alexandriaflfregular';
    font-size: 48px;
    text-align: left;
    line-height: 62px;
}
#home .text-one p span {
    font-family: 'alexandriaflfbold';
    font-size: 52px;
    padding: 5px;
    color: #33cccc;
    padding: 0;
}
#home .arrow-container {
    position: absolute;
    top: 574px;
    left: 450px;
}
.red-box, .red-boxTwo, .red-boxThree, .red-boxFour, .red-boxFive {
    background-color: #fb7070;
}
.blue-box {
    background-color: #33cccc;
}
/***HOME SLIDE-ONE***/
.container #home-slide1 {
    position: relative;
    width: 1014px;
    top: 100px;
    height: 780px;
}
#home-slide1 .red-box {
    height: 105px;
    width: 446px;
    position: absolute;
    z-index: 1;
    top: 70px;
    left: 2px;
}
#home-slide1 .red-box p {
    color: white;
    font-size: 25px;
    padding: 10px 0px 0px 23px;
}
#home-slide1 .red-box p span {
    font-size: 35px;
}
#home-slide1 .icepot img {
    position: absolute;
    top: 119px;
    left: 3px;
}
#home-slide1 .red-boxTwo {
    height: 103px;
    width: 344px; 
    position: absolute;
    right: 40px;
    top: 71px;
}
#home-slide1 .red-boxTwo p {
    color: white;
    font-size: 25px;
    padding: 15px 0px 0px 17px;
}
#home-slide1 .red-boxTwo p .med {
    font-size: 30px;
}
#home-slide1 .red-boxTwo p .large {
    font-size: 40px;
}
#home-slide1 .red-boxThree {
    position: absolute;
    right: 2px;
    top: 266px;
    width: 383px;
    height: 103px;
}
#home-slide1 .red-boxThree p {
    color: white;
    font-size: 29px;
    padding: 18px 0px 0px 18px;
}
#home-slide1 .blue-box {
    position: absolute;
    top: 386px;
    left: 1px;
    width: 154px;
    height: 136px;
}
#home-slide1 .blue-box .title {
    font-size: 25px;
    color: white;
    margin: 0;
    padding: 5px 0px 0px 12px;
}
#home-slide1 .blue-box .body {
    font-size: 16px;
    line-height: 19px;
    color: white;
    margin: 0;
    padding: 7px 0px 0px 12px;
}
#home-slide1 .note {
    position: absolute;
    top: 486px;
    left: 252px;
}
#home-slide1 .note p {
    font-size: 39px;
    text-align: center;
    margin: 0;
}
#home-slide1 .note p .red {
    color: #fb7070;
}
#home-slide1 .note p .blue {
    font-family: 'alexandriaflfbold_italic';
    font-size: 53px;
    color: #33cccc;
}
#home-slide1 .note .sidenote {
    padding: 7px 34px 0px 0px;
    font-size: 30px
}
#home-slide1 .note .sidenote span {
    font-size: 18px
}
#home-slide1 .red-connect0 {
    position: absolute;
    left: 448px;
    top: 91px;
    z-index: 2;
}
#home-slide1 .red-connect1 {
    position: absolute;
    right: 300px;
    top: 174px;
}
#home-slide1 .red-arrow {
    position: absolute;
    right: 270px;
    top: 369px;
}
#home-slide1 .arrow-container {
    position: absolute;
    padding-bottom: 0px;
    left: 485px;
    top: 604px;
}


/***HOME SLIDE-TWO***/
.container #home-slide2 {
    position: relative;
    width: 1014px;
    top: 500px;
    height: 1550px;
}
#home-slide2 .red-box {
    position: absolute;
    top: 46px;
    left: 0px;
    height: 86px;
    width: 461px;
}
#home-slide2 .red-box p {
    line-height: 32px;
    font-size: 25px;
    color: white;
    padding: 13px 0px 0px 16px;
}
#home-slide2 .red-boxTwo {
    position: absolute;
    top: 93px;
    right: -1px;
    height: 141px;
    width: 323px;
}
#home-slide2 .red-boxTwo .title {
    line-height: 32px;
    font-size: 30px;
    color: white;
    padding: 17px 0px 0px 20px;
    margin-bottom: 0px
}
#home-slide2 .red-boxTwo .body {
    color: white;
    padding: 17px 0px 0px 20px;
    font-size: 29px;
    margin-top: -13px;
    line-height: 33px;
}
#home-slide2 .icepot-fire {
    position: absolute;
    top: 89px;
    left: 31px;
    z-index: -1;
}
#home-slide2 .note {
    position: absolute;
    width: 160px;
    left: 63px;
    top: 343px;
}
#home-slide2 .note p {
    margin: 0;
    line-height: 19px;
    font-size: 16px;
}
#home-slide2 .note .parenth {
    display: inline;
    font-size: 50px;
    font-family: "alexandriaflfregular";
    line-height: 0px;
    bottom: 17px;
}
#home-slide2 .note #parenth-one {
    position: relative;
    right: 18px;
}
#home-slide2 .note #parenth-two {
    position: relative;
    left: 132px;
}
#home-slide2 .wrong {
    position: absolute;
    top: 359px;
    right: 15px;
}
#home-slide2 .wrong p {
    color: #33cccc;
    font-size: 80px
}
#home-slide2 .text-one {
    position: absolute;
    top: 506px;
    left: 74px;
}
#home-slide2 .text-one p {
    font-size: 40px;
}
#home-slide2 .text-one p .italic {
    font-family: 'alexandriaflfbold_italic';
}
#home-slide2 .text-one p .red {
    color: #fb7070;
}
#home-slide2 .text-one p .blue {
    color: #33cccc;
    font-size: 60px;
}
#home-slide2 .red-boxThree {
    position: absolute;
    top: 603px;
    left: 59px;
    height: 79px;
    width: 416px;
}
#home-slide2 .red-boxThree p {
    font-size: 45px;
    color: white;
    padding: 22px 0px 0px 18px;
}
#home-slide2 .blue-box {
    position: absolute;
    top: 708px;
    left: 475px;
    height: 98px;
    width: 538px;
}
#home-slide2 .blue-box p {
    font-size: 30px;
    color: white;
    padding: 14px 0px 0px 22px;
}
#home-slide2 .red-boxFour {
    position: absolute;
    top: 852px;
    left: 62px;
    height: 118px;
    width: 607px;
}
#home-slide2 .red-boxFour p {
    font-size: 30px;
    color: white;
    padding: 11px 0px 0px 19px;
    line-height: 48px;
}
#home-slide2 .red-boxFour p span {
    font-family: 'alexandriaflfbold_italic';
    font-size: 45px;
}
#home-slide2 .text-two {
    position: absolute;
    top: 1018px;
    left: 81px;
}
#home-slide2 .text-two p {
    font-size: 50px;
    max-width: 950px;
    line-height: 60px;
}
#home-slide2 .text-two p .italic {
    font-family: 'alexandriaflfbold_italic';
}
#home-slide2 .text-two p .bold {
    color: #33cccc;
    font-family: 'alexandriaflfbold_italic';
}
#home-slide2 .red-boxFive {
    position: absolute;
    top: 1159px;
    left: 332px;
    height: 45px;
    width: 356px;
}
#home-slide2 .red-boxFive p {
    color: white;
    font-size: 25px;
    padding: 7px 0px 0px 9px;
}
#home-slide2 .red-connect0 {
    position: absolute;
    top: 46px;
    left: 461px;
}
#home-slide2 .red-arrow {
    position: absolute;
    top: 234px;
    left: 764px;
}
#home-slide2 .black-connect0 {
    position: absolute;
    top: 621px;
    left: 475px;
}
#home-slide2 .black-connect1 {
    position: absolute;
    top: 806px;
    left: 189px;
}
#home-slide2 .arrow-container {
    position: absolute;
    top: 1250px;
    left: 450px;
}

/***HOME SLIDE-THREE***/
.container #home-slide3 {
    position: relative;
    width: 1014px;
    top: 800px;
    height: 1000px;
}
#home-slide3 .globe{
    position: absolute;
    top: 27px;
    left: 131px;
}
#home-slide3 .text-one{
    position: absolute;
    left: 233px;
    top: 470px;
    width: 600px;
}
#home-slide3 .text-one p {
    line-height: 60px;
    text-align: center;
    font-family: 'alexandriaflfregular';
}
/***TEMP***/
#home-slide3 .overlay {
    position: absolute;
    opacity: 0.2;
    left:0;
    top:0;
}

